# intern-agent

./: .gitignore  Makefile  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
src/intern_agent/: auth.py  config.py  db.py  hh.py  hh_account.py  llm.py  services.py
src/intern_agent/api/: app.py
static/: icons.js  index.html  m3.css
tests/: test_api.py  test_auth.py  test_db.py  test_feed.py  test_hh.py  test_hh_account.py  test_llm.py  test_settings.py
